add small programm

--- a/index1.html
+++ b/index1.html
@@ -22,4 +22,32 @@
     Limited
     Hub
 </body> -->
+<script>
+
+    let rand = Math.random();
+    let first, second, third;
+    // 0 0.33 0.66 1
+    if(rand<0.33){
+        first = "Crazy";
+    }
+    else if(rand<0.66 && rand>=0.33){
+     first = "Amazing";   
+    }
+    else{
+        first ="Fire"
+    }
+    // Lets generate the second word
+
+    if( rand>=0.33){
+        second = "Crazy"
+    }
+    else if(rand<0.66 && rand>=0.33){
+         scond = "Amazing"
+    }
+    else{
+        second = "Fire"
+    }
+
+    
+</script>
 </html>
