--- a/index1.html
+++ b/index1.html
@@ -1,65 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .box {
+            height: 45px;
+            width: 56px;
+            border: 2px solid black;
+            margin: 5px;
+            padding: 5px;
+        }
+    </style>
 </head>
+
 <body>
-    <!--create a business name generator by combining list of adjective  -->
-    <!-- Adjectives:
-    crazy
-    Amazing
-    fire
-
-    Shop Name:
-    Engine
-    Foods
-    Garments
-
-    Another Word:
-    Bros
-    Limited
-    Hub -->
+    <div class="container">
+        <div class="box">Box1</div>
+        <div class="box">Box2</div>
+        <div class="box">Box3</div>
+        <div class="box">Box4</div>
+        <div class="box">Box5</div>
+    </div>
 </body>
-<script>
 
-    let rand = Math.random();
-    let first, second, third;
-    // 0 0.33 0.66 1
-    if(rand<0.33){
-        first = "Crazy";
-    }
-    else if(rand<0.66 && rand>=0.33){
-     first = "Amazing";   
-    }
-    else{
-        first ="Fire"
-    }
-    // Lets generate the second word
-    
-    rand = Math.random();
-    if( rand>=0.33){
-        second = "Crazy"
-    }
-    else if(rand<0.66 && rand>=0.33){
-         scond = "Foods"
-    }
-    else{
-        second = "Fire"
-    }
-   
-      // Lets generate the third word
-    rand = Math.random();
-    if( rand>=0.33){
-        first= "Bros"
-    }
-    else if(rand<0.66 && rand>=0.33){
-         first = "Limited"
-    }
-    else{
-        first = "Hub"
-    }
-      console.log(`${first} ${second} ${third}`)
-</script>
 </html>
