--- a/index1.html
+++ b/index1.html
@@ -7,9 +7,21 @@
     <title>Document</title>
 
     <style>
+
+
+.container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 200px;
+        border: 2px solid black;
+        margin: 20px;
+        padding: 10px;
+}
         .box {
             height: 45px;
-            width: 56px;
+            width: 56px;      
             border: 2px solid black;
             margin: 5px;
             padding: 5px;
@@ -26,5 +38,5 @@
         <div class="box">Box5</div>
     </div>
 </body>
-
+<script src="script1.js"></script>
 </html>
