--- a/index1.html
+++ b/index1.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container  red bg-green">
         <div class="box" style ="display: flex;" data-createdby="guddiya"
          data-conceptby="rohan">Hey I am box</div>
         <div class="box">Box2</div>
