--- a/Async/Await&FetchApi.html
+++ b/Async/Await&FetchApi.html
@@ -78,6 +78,26 @@ const request2 = new Request(request1, {
 post(request1);
 post(request2);
 
+
+
+function getData(){
+  return new Promise((resolve,reject) =>{
+    setTimeout(() =>{
+       resolve(455)
+    },3500);
+  })
+}
+
+async function main() {
+  
+console.log("Loading modules")
+console.log("Do something else")
+console.log("Load data")
+let data = await getData()
+console.log(data)
+console.log("process Data")
+consol.log("task 2")
+}
     </script>
 </body>
 </html>
