--- a/tryCatchError.html
+++ b/tryCatchError.html
@@ -8,8 +8,8 @@
 <body>
     <script>
 
-        let a = prompt("Enter first number")
-        let b = prompt ("Enter second number")
+        // let a = prompt("Enter first number")
+        // let b = prompt ("Enter second number")
 
         // if(isNaN(a) || isNaN(b)){
         //     throw SyntaxError("Sorry this is not allowed")
@@ -23,24 +23,52 @@
         //     console.log("Error aa gya bhai")
         // }
 
-        let sum = parseInt(a) + parseInt(b)
+        // let sum = parseInt(a) + parseInt(b)
 
-        function main(){
-            let x =10;
-            try{
-                console.log("The sum  is", sum*x)
-                return true
-            }
-            catch (error) {
-                console.log("Error aa gya bhai")
-                return false
-            }
-            finally{
-                console.log("Finally back in the game")
-            }
+        // function main(){
+        //     let x =10;
+        //     try{
+        //         console.log("The sum  is", sum*x)
+        //         return true
+        //     }
+        //     catch (error) {
+        //         console.log("Error aa gya bhai")
+        //         return false
+        //     }
+        //     finally{
+        //         console.log("Finally back in the game")
+        //     }
+        // }
+
+        // let c = main()
+
+
+
+
+//  1. write a program to load a javascript file in a browser using promises. Use .then()   
+//  to display an alert when the load is complete.
+
+        function loadScript(src){
+            return new Promise(function(resolve, reject){
+                let script = document.createElement('script')
+                script.src = src;
+                script.onload = function(){
+                    resolve(src + " is loaded")
+                }
+                script.onerror = function(){
+                    reject(new Error("Script load error"))
+                }
+                document.head.append(script)
+            })
         }
 
-        let c = main()
+        let p = loadScript("https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js")
+
+        p.then(function(value){
+            alert(value)
+        }).catch(function(error){
+            alert("Error is " + error)
+        })
     </script>
 </body>
 </html>
