--- a/classObject.html
+++ b/classObject.html
@@ -36,7 +36,15 @@
         super(name);
         console.log("Object is created and he is a lion....")
     }
+    eats(){
+        console.log("kha rha hoon")
+    }
+    jumps(){
+        console.log("kood rha hoon")
+    }
    }
+   let a = new Animal("Dog");
+   console.log(a);
   </script>  
 </body>
 </html>
