--- a/Exercise.html
+++ b/Exercise.html
@@ -11,7 +11,7 @@
 <script>
     const randomDelay = ()=>{
         return new Promise((resolve, reject) => {
-            timout = 1+6* Math.random();
+            timeout = 1+6* Math.random();
             setTimeout(() => {
                resolve()
             },timeout * 1000);
