--- a/Exericise14.html
+++ b/Exericise14.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asincronous</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Asincronous</title>
 </head>
 
- <style>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-  body{
+  body {
 
     background-color: green;
     color: white;
     font-family: "Poppins", sans-serif;
-  /* font-weight: 100;
+    /* font-weight: 100;
   font-style: normal; */
 
   }
- </style>
+</style>
 
 
 
 <body>
-   <!-- Create a hacking simulator which has green background and it shows
+  <!-- Create a hacking simulator which has green background and it shows
     these messages with random delay of 1 to 7 seconds  
     
     Initializing Hacking...
@@ -34,40 +34,42 @@
     cleaning up....
     the three dots must blinks so that like a real terminal
     -->
-    <div>Initializing Hacking ....</div>
-    <script>
-
-const addItem = async (item)=>{
-        await randomDelay();
-        let div = document.createElement("div");
-        div.innerHTML = item;
-        document.body.append(div)
-      }
-
-      const randomDelay = () =>{
-
-      return new Promise((resolve, reject)=>{
-
-    timeout = 1 + 6* Math.random()
-    setTimeout(()=>{
-        resolve()
-    }, timeout * 1000)
-})
-      }
+  <div>Initializing Hacking ....</div>
+  <script>
 
 
-     async function main(){
-      
-     let t = setInterval(() =>{
-      let last = document.body.lastElementChild;
-      if(last.innerHTML.endsWith("...")){
-        last.innerHTML = last.innerHTML.slice(0, last.innerHTML.length-3)
-      }
-       else{
-        last.innerHTML = last.innerHTML + "."
-       }
 
-     }, 100);
+    const addItem = async (item) => {
+      await randomDelay();
+      let div = document.createElement("div");
+      div.innerHTML = item;
+      document.body.append(div)
+    }
+
+    const randomDelay = () => {
+
+      return new Promise((resolve, reject) => {
+
+        timeout = 1 + 6 * Math.random()
+        setTimeout(() => {
+          resolve()
+        }, timeout * 1000)
+      })
+    }
+
+
+    async function main() {
+
+      let t = setInterval(() => {
+        let last = document.body.lastElementChild;
+        if (last.innerHTML.endsWith("...")) {
+          last.innerHTML = last.innerHTML.slice(0, last.innerHTML.length - 3)
+        }
+        else {
+          last.innerHTML = last.innerHTML + "."
+        }
+
+      }, 100);
 
 
 
@@ -77,15 +79,15 @@ const addItem = async (item)=>{
         "Password files Detected....",
         "Sending all passwords and personal files to server...",
         "Cleaing up ...."
-      ]  
+      ]
 
-      for (const item of text){
-      await addItem(item)
+      for (const item of text) {
+        await addItem(item)
       }
-     await randomDelay() 
-     clearInterval(t)
+
     }
     main()
-    </script>
+  </script>
 </body>
+
 </html>
