--- a/Exericise14.html
+++ b/Exericise14.html
@@ -47,10 +47,8 @@
     }
 
     const randomDelay = () => {
-
       return new Promise((resolve, reject) => {
-
-        timeout = 1 + 6 * Math.random()
+      timeout = 1 + 6 * Math.random()
         setTimeout(() => {
           resolve()
         }, timeout * 1000)
@@ -61,14 +59,15 @@
     async function main() {
 
       let t = setInterval(() => {
-        let last = document.body.lastElementChild;
+        let last = document.body.getElementsByTagName("div");
+        last =  last[last.lenght -1] ;
         if (last.innerHTML.endsWith("...")) {
           last.innerHTML = last.innerHTML.slice(0, last.innerHTML.length - 3)
         }
         else {
           last.innerHTML = last.innerHTML + "."
         }
-
+       
       }, 100);
 
 
@@ -84,7 +83,8 @@
       for (const item of text) {
         await addItem(item)
       }
-
+      await randomDelay();
+      clearInterval(t);
     }
     main()
   </script>
