--- a/Callbacka&Promisees.html
+++ b/Callbacka&Promisees.html
@@ -121,10 +121,22 @@ function walkDog(){
             resolve("you walked the dog");
         },1500);
     });
-    setTimeout(()=>{
-
-    })
 }
+   function cleanKitchen(){
+    return new Promise((resolve, reject)=>{
+        setTimeout(()=>{
+            resolve("you cleaned the kitchen")
+        },2500)
+    });
+   };
+
+   function takeOutTrash(){
+    return new Promise((resolve, reject)=>{
+        setTimeout(()=>{
+            resolve("you took out the trash")
+        },500)
+    })
+   }
 
 
 
