--- a/Callbacka&Promisees.html
+++ b/Callbacka&Promisees.html
@@ -136,7 +136,11 @@ function walkDog(){
             resolve("you took out the trash")
         },500)
     })
-   }
+   };
+
+   walkDog().then(value => {console.log(value); return cleanKitchen()})
+            .then(value => {console.log(value); return takeOutTrash()})
+            .then(value => {console.log(value); return takeOutTrash()});
 
 
 
