--- a/InterviewQ.html
+++ b/InterviewQ.html
@@ -33,6 +33,10 @@
     }
   }
   console.log(houses)
+
+  // The Double Trouble: you are tasked with writing a function that doubles each element in array.
+     // However, there's catch: if the array contains consecutive duplicate elements, only double one 
+     // of them.
     </script>
 </body>
 </html>
