add button and style

--- a/InterviewQ.html
+++ b/InterviewQ.html
@@ -6,6 +6,16 @@
     <title>Interview Questions</title>
 </head>
 <body>
+     <button>Add note</button>
+    <div class="note"></div>
+
+    <!-- Password validator UI -->
+    <div style="margin-top:1rem;">
+        <input id="pwInput" type="password" placeholder="Enter password">
+        <button id="validateBtn">Validate password</button>
+        <div id="pwResult" aria-live="polite" style="margin-top:.5rem"></div>
+    </div>
+    
     <script>
 
 /*The Magical sorting Hat: Imagine you are creating  a Magical sorting hat for a wizard school. 
