--- a/InterviewQ.html
+++ b/InterviewQ.html
@@ -1,89 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interview Questions</title>
 </head>
+
 <body>
-     <button>Add note</button>
+    <button>Add note</button>
     <div class="note"></div>
 
-  
+    + <button id="addNoteBtn" type="button">Add note</button>
+    + <div class="note" id="notesContainer" style="margin-top:1rem"></div>
     <script>
 
-/*The Magical sorting Hat: Imagine you are creating  a Magical sorting hat for a wizard school. 
-  Implement a javaScript function that takes an array of student names and assigns time to one of the 
-  four houses (Gryffindor (lenght less than 6),Hufflepuff(lenght less a than 8),Revenclaw(length less
-  than 12 or Slytherin(lenght grater than or equal to 12) based on the lenght of their names.)
-  ) */
-//  let students = ["shubh","anajali","shivani","shivam","Annapurna","shubham","krishnanendu",
-//     "Ravindranathm","Shivesh","Kaif","Enanuel"
-//  ]
-//   let houses = []
+        /*The Magical sorting Hat: Imagine you are creating  a Magical sorting hat for a wizard school. 
+          Implement a javaScript function that takes an array of student names and assigns time to one of the 
+          four houses (Gryffindor (lenght less than 6),Hufflepuff(lenght less a than 8),Revenclaw(length less
+          than 12 or Slytherin(lenght grater than or equal to 12) based on the lenght of their names.)
+          ) */
+        //  let students = ["shubh","anajali","shivani","shivam","Annapurna","shubham","krishnanendu",
+        //     "Ravindranathm","Shivesh","Kaif","Enanuel"
+        //  ]
+        //   let houses = []
 
-//   for (const student of students){
-//     if(student.length <6){
-//         houses.append("Gryffindor")
-//     }
-//     else if(student.length < 8){
-//         houses.append("Hufflepuff")
-//     }
-//     else if(student.length < 12){
-//         houses.append("Ravenclaw")
-//     }
-//     else{
-//         houses.append("slytherin")
-//     }
-//   }
-//   console.log(houses)
+        //   for (const student of students){
+        //     if(student.length <6){
+        //         houses.append("Gryffindor")
+        //     }
+        //     else if(student.length < 8){
+        //         houses.append("Hufflepuff")
+        //     }
+        //     else if(student.length < 12){
+        //         houses.append("Ravenclaw")
+        //     }
+        //     else{
+        //         houses.append("slytherin")
+        //     }
+        //   }
+        //   console.log(houses)
 
-  // The Double Trouble: you are tasked with writing a function that doubles each element in array.
-     // However, there's catch: if the array contains consecutive duplicate elements, only double one 
-     // of them.
+        // The Double Trouble: you are tasked with writing a function that doubles each element in array.
+        // However, there's catch: if the array contains consecutive duplicate elements, only double one 
+        // of them.
 
-    //  5. The Sum Selector: you are working on a function that should sum all numbers in an Array
-    //  until it encounters a negative number. Write a function that performs this summation.
+        //  5. The Sum Selector: you are working on a function that should sum all numbers in an Array
+        //  until it encounters a negative number. Write a function that performs this summation.
 
 
-    function sumUntilNagtive(arr){
-        let sum =0;
-        for(const v of arr){
-            for(const v of arr){
-                if(typeof v!== 'number')continue;
-                if(v<0) break;
-                sum += v;
-            }
-            return sum;
-        }
-    }
-    console.log (sumUntilNagtive([1,2,3,4,-1,5,6])) //10
-
-    //The Vowel Counter: you need to create a function that should sum all numbers in an array
-    // until it encounters a negative number. Write a function that  performs this summation.
-
-    function countVowels(str){
-        let count =0;
-        const vowels = 'aeiouAEIOU';
-        for(const char of str){
-            if(vowels.includes(char)){
-                count++;
+        function sumUntilNagtive(arr) {
+            let sum = 0;
+            for (const v of arr) {
+                for (const v of arr) {
+                    if (typeof v !== 'number') continue;
+                    if (v < 0) break;
+                    sum += v;
+                }
+                return sum;
             }
         }
-        return count;
-    }
-    console.log(countVowels("Hello World")) //3
+        console.log(sumUntilNagtive([1, 2, 3, 4, -1, 5, 6])) //10
+
+        //The Vowel Counter: you need to create a function that should sum all numbers in an array
+        // until it encounters a negative number. Write a function that  performs this summation.
+
+        function countVowels(str) {
+            let count = 0;
+            const vowels = 'aeiouAEIOU';
+            for (const char of str) {
+                if (vowels.includes(char)) {
+                    count++;
+                }
+            }
+            return count;
+        }
+        console.log(countVowels("Hello World")) //3
 
 
-//   7.The local storage Manager: You are working on a note-taking app, and you to implement a 
-//     functiion named saveNoteToLocalStorage that takes a note object and saves it to the browser's
-//     local storage.
+        //   7.The local storage Manager: You are working on a note-taking app, and you to implement a 
+        //     functiion named saveNoteToLocalStorage that takes a note object and saves it to the browser's
+        //     local storage.
 
-    function saveNoteToLocalStorage(note){
-        let notes = JSON.parse(localStorage.getItem('notes')) || [];
-        notes.push(note);
-        localStorage.setItem('notes', JSON.stringify (notes));
-    }
-    </script>
-</body>
-</html>
+        function saveNoteToLocalStorage(note) {
+            let notes = JSON.parse(localStorage.getItem('notes')) || [];
+            notes.push(note);
+            localStorage.setItem('notes', JSON.stringify(notes));
+        }
+
+        // render notes from localStorage into the .note container
+        function renderNotes() {
+            const container = document.getElementById('notesContainer');
+            const notes = JSON.parse(localStorage.getItem('notes')) || [];
+            if (!container) return;
+            if (notes.length === 0) {
+                container.textContent = 'No notes saved.';
+                return;
+            }
+            container.innerHTML = '';
+            const ul = document.createElement('ul');
+            for (const n of notes) {
+                const li = document.createElement('li');
+                // if note is an object with text property, show that, else show as string
+                li.textContent = (typeof n === 'object' && n !== null && 'text' in n) ? n.text : String(n);
+                ul.appendChild(li);
+            }
+            container.appendChild(ul);
+        }
+
+        // wire Add note button to prompt, save and re-render
+    document.getElementById('addNoteBtn').addEventListener('click', () => {
+        const text = prompt('Enter a note:');
+        if (text === null) return; // user cancelled
+        const note = { text, createdAt: new Date().toISOString() };
+        saveNoteToLocalStorage(note);
+        renderNotes();
+    });
+
+    // render on page load
+    renderNotes();
