--- a/InterviewQ.html
+++ b/InterviewQ.html
@@ -11,8 +11,8 @@
     <button>Add note</button>
     <div class="note"></div>
 
-    + <button id="addNoteBtn" type="button">Add note</button>
-    + <div class="note" id="notesContainer" style="margin-top:1rem"></div>
+     <button id="addNoteBtn" type="button">Add note</button>
+     <div class="note" id="notesContainer" style="margin-top:1rem"></div>
     <script>
 
         /*The Magical sorting Hat: Imagine you are creating  a Magical sorting hat for a wizard school. 
@@ -109,13 +109,20 @@
         }
 
         // wire Add note button to prompt, save and re-render
-    document.getElementById('addNoteBtn').addEventListener('click', () => {
-        const text = prompt('Enter a note:');
-        if (text === null) return; // user cancelled
-        const note = { text, createdAt: new Date().toISOString() };
-        saveNoteToLocalStorage(note);
-        renderNotes();
-    });
+        document.getElementById('addNoteBtn').addEventListener('click', () => {
+            const text = prompt('Enter a note:');
+            if (text === null) return; // user cancelled
+            const note = { text, createdAt: new Date().toISOString() };
+            saveNoteToLocalStorage(note);
+            renderNotes();
+        });
 
-    // render on page load
-    renderNotes();
+        // render on page load
+        renderNotes();
+   
+      let a = 
+
+      </script>
+</body>        
+
+
