--- a/InterviewQ.html
+++ b/InterviewQ.html
@@ -120,7 +120,8 @@
         // render on page load
         renderNotes();
    
-      let a = 
+      let a = prompt("Enter a number");
+      document.write('Welcome' + a)
 
       </script>
 </body>        
